# plmc_exps

./: README.md  active_sampler.py  base_gp.py  bramblemet.py  dummy_al_neutro.py  mogp_icm.py  mogp_plmc.py  mogp_var.py  neutronics.py  pyproject.toml  sarcos.py  ship_maintenance.py  synth_data_exps.py  test_bench.py  utilities.py
data/neutro/: test_x_lhs512.pt  test_y_lhs512.pt  train_x_sobol256.pt  train_y_sobol256.pt
